# Cpp

./: .gitignore  README.md  SETUP.md
cpp_11-14/: CMakeLists.txt
cpp_11-14/include/: template_variadic.h
cpp_11-14/src/: decltype.cpp  forward.cpp  lambda.cpp  miscellaneous.cpp  move.cpp  operator_overloading.cpp  rvalue_lvalue.cpp  smart_ptr.cpp  static_assert.cpp  stl.cpp  template.cpp  template_variadic.cpp
cpp_17/: CMakeLists.txt
cpp_17/include/: common.h  template_variadic.h
cpp_17/src/: filesystem.cpp  lambda.cpp  library_miscellaneous.cpp  miscellaneous.cpp  miscellaneous2.cpp  parallel.cpp  stl.cpp  template.cpp  template_variadic.cpp
cpp_cross_platform/: CMakeLists.txt  README.md
cpp_cross_platform/include/: hello.h
cpp_cross_platform/src/: hello.cpp  main.cpp
emojiCpp/: emojiCpp.sln
emojiCpp/emojiCpp/: emojiCpp.cpp  emojiCpp.vcxproj  emojiCpp.vcxproj.filters
hook/: pre-commit
